python/versioned_docs/version-1.17/api/class-pageassertions.mdx
---
id: class-pageassertions
title: "PageAssertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The [PageAssertions] class provides assertion methods that can be used to make assertions about the [Page] state in the tests. A new instance of [LocatorAssertions] is created by calling [playwright_assertions.expect(page)](./api/class-playwrightassertions.mdx#playwright-assertions-assert-that-page):


- [page_assertions.not_to_have_title(title_or_reg_exp, **kwargs)](./api/class-pageassertions.mdx#page-assertions-not-to-have-title)
- [page_assertions.not_to_have_url(url_or_reg_exp, **kwargs)](./api/class-pageassertions.mdx#page-assertions-not-to-have-url)
- [page_assertions.to_have_title(title_or_reg_exp, **kwargs)](./api/class-pageassertions.mdx#page-assertions-to-have-title)
- [page_assertions.to_have_url(url_or_reg_exp, **kwargs)](./api/class-pageassertions.mdx#page-assertions-to-have-url)

## page_assertions.not_to_have_title(title_or_reg_exp, **kwargs) {#page-assertions-not-to-have-title}
- `title_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-title-option-title-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected title or RegExp.<a href="#page-assertions-not-to-have-title-option-title-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-title-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-not-to-have-title-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-title-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-not-to-have-title-return" class="list-anchor">#</a>

The opposite of [page_assertions.to_have_title(title_or_reg_exp, **kwargs)](./api/class-pageassertions.mdx#page-assertions-to-have-title).

## page_assertions.not_to_have_url(url_or_reg_exp, **kwargs) {#page-assertions-not-to-have-url}
- `url_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-url-option-url-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected substring or RegExp.<a href="#page-assertions-not-to-have-url-option-url-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-url-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-not-to-have-url-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-url-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-not-to-have-url-return" class="list-anchor">#</a>

The opposite of [page_assertions.to_have_url(url_or_reg_exp, **kwargs)](./api/class-pageassertions.mdx#page-assertions-to-have-url).

## page_assertions.to_have_title(title_or_reg_exp, **kwargs) {#page-assertions-to-have-title}
- `title_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-option-title-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected title or RegExp.<a href="#page-assertions-to-have-title-option-title-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-to-have-title-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-to-have-title-return" class="list-anchor">#</a>

Ensures the page has the given title.

## page_assertions.to_have_url(url_or_reg_exp, **kwargs) {#page-assertions-to-have-url}
- `url_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-option-url-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected substring or RegExp.<a href="#page-assertions-to-have-url-option-url-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-to-have-url-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-to-have-url-return" class="list-anchor">#</a>

Ensures the page is navigated to the given URL.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
